# IVSProjekt

./: .gitignore  CMakeLists.txt  Makefile  README.md  hodnoceni.txt  postinst  postrm  skutecnost.txt
plan/: xkadlep01_xkovalj00_xferenj00_plan.txt
profiling/: callgrind.out
src/: Doxyfile  Makefile  gui.cpp  mainpage.md  math_lib.cpp  math_lib.h  math_lib_tests.cpp  parser  parser.cpp  parser.h  stddev.cpp
src/parser.dSYM/Contents/Resources/DWARF/: parser
